--- a/index.html
+++ b/index.html
@@ -443,6 +443,166 @@
 
     </div>
 
+    <!-- --- CHAT WIDGET START --- -->
+    <style>
+        /* Chat Widget Styles */
+        .chat-widget-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: var(--primary-blue);
+            color: white;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s;
+            z-index: 1000;
+        }
+
+        .chat-widget-btn:hover {
+            transform: scale(1.1);
+        }
+
+        .chat-window {
+            position: fixed;
+            bottom: 90px;
+            right: 20px;
+            width: 350px;
+            height: 500px;
+            background-color: white;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            z-index: 1000;
+            overflow: hidden;
+            display: none;
+            /* Hidden by default */
+        }
+
+        .chat-window.open {
+            display: flex;
+        }
+
+        .chat-header {
+            background-color: var(--primary-blue);
+            color: white;
+            padding: 15px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .chat-close {
+            cursor: pointer;
+            font-size: 1.2rem;
+        }
+
+        .chat-messages {
+            flex: 1;
+            padding: 15px;
+            overflow-y: auto;
+            background-color: #f7f9fc;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .message {
+            max-width: 80%;
+            padding: 10px 15px;
+            border-radius: 12px;
+            font-size: 0.9rem;
+            line-height: 1.4;
+        }
+
+        .msg-agent {
+            background-color: white;
+            color: var(--text-main);
+            align-self: flex-start;
+            border-bottom-left-radius: 2px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        }
+
+        .msg-user {
+            background-color: var(--primary-blue);
+            color: white;
+            align-self: flex-end;
+            border-bottom-right-radius: 2px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        }
+
+        .chat-input-area {
+            padding: 15px;
+            background-color: white;
+            border-top: 1px solid #eef2f6;
+            display: flex;
+            gap: 10px;
+        }
+
+        .chat-input {
+            flex: 1;
+            border: 1px solid #e2e8f0;
+            border-radius: 20px;
+            padding: 10px 15px;
+            font-family: inherit;
+            outline: none;
+        }
+
+        .chat-send {
+            background-color: var(--primary-blue);
+            color: white;
+            border: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+
+    <!-- Floating Button -->
+    <div class="chat-widget-btn" id="chat-toggle">
+        <!-- Chat Icon -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" width="28" height="28">
+            <path
+                d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+            </path>
+        </svg>
+    </div>
+
+    <!-- Chat Window -->
+    <div class="chat-window" id="chat-window">
+        <div class="chat-header">
+            <span>Soporte Devolveme AI</span>
+            <span class="chat-close" id="chat-close">✕</span>
+        </div>
+        <div class="chat-messages" id="chat-messages">
+            <!-- Messages go here -->
+            <div class="message msg-agent">Hola, soy el asistente virtual de Devolveme. ¿En qué puedo ayudarte?</div>
+        </div>
+        <div class="chat-input-area">
+            <input type="text" class="chat-input" id="chat-input" placeholder="Escribe un mensaje...">
+            <button class="chat-send" id="chat-send-btn">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" width="20" height="20">
+                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                    <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <!-- --- CHAT WIDGET END --- -->
+
     <!-- Logic Script (Preserved & Adapted) -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -494,6 +654,82 @@
             // Reveal UI
             loading.style.display = 'none';
             content.classList.remove('hidden');
+
+            // --- CHAT WIDGET LOGIC ---
+            const chatToggle = document.getElementById('chat-toggle');
+            const chatClose = document.getElementById('chat-close');
+            const chatWindow = document.getElementById('chat-window');
+            const chatInput = document.getElementById('chat-input');
+            const chatSendBtn = document.getElementById('chat-send-btn');
+            const chatMessages = document.getElementById('chat-messages');
+
+            // NGROK URL (HARDCODED FOR DEMO)
+            const API_URL = "https://patchiest-izaiah-commemorable.ngrok-free.dev/api/v1/web/chat";
+            const USER_ID = "guest_" + Math.floor(Math.random() * 10000);
+
+            let hasGreetedWithCode = false;
+
+            function toggleChat() {
+                chatWindow.classList.toggle('open');
+                if (chatWindow.classList.contains('open') && code && !hasGreetedWithCode) {
+                    // Auto-send code greeting if first open
+                    hasGreetedWithCode = true;
+                    // Simulate user typing
+                    const msg = `Hola, encontré el objeto con código ${code}`;
+                    addMessage(msg, 'user');
+                    sendMessageToBackend(msg);
+                }
+            }
+
+            chatToggle.addEventListener('click', toggleChat);
+            chatClose.addEventListener('click', toggleChat);
+
+            function addMessage(text, sender) {
+                const div = document.createElement('div');
+                div.classList.add('message', sender === 'user' ? 'msg-user' : 'msg-agent');
+                div.textContent = text;
+                chatMessages.appendChild(div);
+                chatMessages.scrollTop = chatMessages.scrollHeight;
+            }
+
+            async function sendMessageToBackend(text) {
+                try {
+                    const response = await fetch(API_URL, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            message: text,
+                            user_id: USER_ID
+                        })
+                    });
+
+                    if (!response.ok) throw new Error('Network error');
+
+                    const data = await response.json();
+                    addMessage(data.response, 'agent');
+
+                } catch (error) {
+                    console.error("Chat Error:", error);
+                    addMessage("Lo siento, perdí la conexión con el servidor.", 'agent');
+                }
+            }
+
+            function handleSend() {
+                const text = chatInput.value.trim();
+                if (!text) return;
+
+                addMessage(text, 'user');
+                chatInput.value = '';
+                sendMessageToBackend(text);
+            }
+
+            chatSendBtn.addEventListener('click', handleSend);
+            chatInput.addEventListener('keypress', (e) => {
+                if (e.key === 'Enter') handleSend();
+            });
+            // -------------------------
         });
     </script>
 </body>
