Feat: Add AI Automation card and update grid layout

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         /* Desktop: 3 columns */
         @media (min-width: 768px) {
             .cards-grid {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(2, 1fr);
             }
         }
 
@@ -389,7 +389,29 @@
                     QR.</p>
             </a>
 
-            <!-- Card 2: Tecnología -->
+            <!-- Card 2: IA & Automatización -->
+            <div class="card">
+                <div class="card-icon">
+                    <!-- Brain/Chip Icon -->
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="4" y="4" width="16" height="16" rx="2" ry="2"></rect>
+                        <rect x="9" y="9" width="6" height="6"></rect>
+                        <line x1="9" y1="1" x2="9" y2="4"></line>
+                        <line x1="15" y1="1" x2="15" y2="4"></line>
+                        <line x1="9" y1="20" x2="9" y2="23"></line>
+                        <line x1="15" y1="20" x2="15" y2="23"></line>
+                        <line x1="20" y1="9" x2="23" y2="9"></line>
+                        <line x1="20" y1="14" x2="23" y2="14"></line>
+                        <line x1="1" y1="9" x2="4" y2="9"></line>
+                        <line x1="1" y1="14" x2="4" y2="14"></line>
+                    </svg>
+                </div>
+                <h3>IA & Automatización</h3>
+                <p>Sistema automatizado, aliado con IA de vanguardia en la tecnología.</p>
+            </div>
+
+            <!-- Card 3: Tecnología -->
             <a href="tecnologia.html" class="card" style="text-decoration: none; color: inherit;">
                 <div class="card-icon">
                     <!-- Smartphone/Tech Icon -->
@@ -403,7 +425,7 @@
                 <p>Sistema QR y NFC sin apps intermediarias. Notificaciones instantáneas y protección de identidad.</p>
             </a>
 
-            <!-- Card 3: Compromisos Sociales -->
+            <!-- Card 4: Compromisos Sociales -->
             <a href="compromisos.html" class="card" style="text-decoration: none; color: inherit;">
                 <div class="card-icon">
                     <!-- Heart/Hands Icon -->
